--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "nodemon index"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -10,9 +9,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.7"
   }
 }
