--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
-    "socketio": "^1.0.0"
+    "socket.io": "^4.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
