--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.1",
+    "crypto-js": "^4.0.0",
     "highlight.js": "^10.7.2",
     "markdown-it": "^12.0.6",
+    "moment": "^2.29.1",
+    "node-forge": "^0.10.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.0",
@@ -16,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "socket.io-client": "^4.0.2",
+    "ursa-purejs": "^0.0.3",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
