--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
-    "socket.io": "^4.1.1"
+    "socket.io": "^4.1.1",
+    "ursa-purejs": "^0.0.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
